--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <footer style="position: fixed; bottom: 0; width: 100%; text-align: center; color: black; font-family:'Josefin Sans', sans-serif';"> Trabajo Final - Segundo Tramo - Argentina Programa - 2023 </footer>
 </html>
